# generic_mixing_framework

./: .gitignore  AliAnalysisTaskTTreeFilter.cxx  AliAnalysisTaskTTreeFilter.h  AliGMFDummyJetFinder.cxx  AliGMFDummyJetFinder.h  AliGMFEventContainer.cxx  AliGMFEventContainer.h  AliGMFEventCuts.cxx  AliGMFEventCuts.h  AliGMFEventMixer.cxx  AliGMFEventMixer.h  AliGMFEventReader.cxx  AliGMFHistogramManager.cxx  AliGMFHistogramManager.h  AliGMFMixingManager.cxx  AliGMFMixingManager.h  AliGMFSimpleEventCuts.cxx  AliGMFSimpleEventCuts.h  AliGMFSimpleJetFinder.cxx  AliGMFSimpleJetFinder.h  AliGMFSimpleTrackCuts.cxx  AliGMFSimpleTrackCuts.h  AliGMFTTreeEventCuts.cxx  AliGMFTTreeEventCuts.h  AliGMFTTreeHeader.cxx  AliGMFTTreeHeader.h  AliGMFTTreeTrack.cxx  AliGMFTTreeTrack.h  AliGMFTrackCuts.cxx  AliGMFTrackCuts.h  CMakeLists.txt  README.md  bsub_ME_jet_analysis.sh  bsub_SE_jet_analysis.sh  bsub_create_mixed_events.sh  compile.C  doxygen.config  harvest_mixed_events.sh  kickstart_SE_jetfinding.sh  kickstart_jetfinding_bsub.sh  (+21 more)
add_task_macros/: AddTaskTTreeFilter.C
attic/: Makefile
cmake/: FindROOT.cmake  ROOTHelper.cmake
filter/: AliAnalysisTaskTTreeFilter.cxx  AliAnalysisTaskTTreeFilter.h  AliGMFEventCuts.cxx  AliGMFEventCuts.h  AliGMFTTreeHeader.cxx  AliGMFTTreeHeader.h  AliGMFTTreeTrack.cxx  AliGMFTTreeTrack.h  AliGMFTrackCuts.cxx  AliGMFTrackCuts.h  runTTreeFilterOnGrid.C
jetfinder/: AliDummyJetFinder.cxx  AliDummyJetFinder.h  AliGMFDummyJetFinder.cxx  AliGMFDummyJetFinder.h
macros/: readTTree.C  runTTreeFilter.C  runTTreeFilterOnGrid.C
objects/: AliAnalysisTaskTTreeFilter.cxx  AliAnalysisTaskTTreeFilter.h  AliGMFEventSimpleFromTTree.cxx  AliGMFEventSimpleFromTTree.h  AliGMFTTreeEvent.cxx  AliGMFTTreeEvent.h  AliGMFTTreeTrack.cxx  AliGMFTTreeTrack.h
reader/: AliGMFEventContainer.cxx  AliGMFEventContainer.h  AliGMFEventReader.cxx  AliGMFEventReader.h
scripts/job_handling/: bsub_SE_jet_analysis.sh  bsub_create_mixed_events.sh  harvest_mixed_events.sh  kickstart_SE_jetfinding.sh  kickstart_jetfinding_bsub.sh  kickstart_mixing_bsub.sh  (+1 more)
src/: CMakeLists.txt  MixingManager.h  MixingManagerLinkDef.h  runEventMixer.h
src/ALICE_data_filtering/: AliAnalysisTaskTTreeFilter.cxx  AliAnalysisTaskTTreeFilter.h  AliGMFEventCuts.h  AliGMFTrackCuts.h  runTTreeFilter.C
src/runEventMixer/: AliGMFEventReader.cxx  AliGMFEventReader.h  AliGMFMixingManager.cxx  AliGMFSimpleEventCuts.h  AliGMFSimpleTrackCuts.cxx  CMakeLists.txt
src/src/: AliGMFEventContainer.cxx  AliGMFEventContainer.h  AliGMFEventCuts.cxx  AliGMFMixingManager.h  AliGMFSimpleEventCuts.cxx  AliGMFSimpleJetFinder.h  AliGMFTTreeHeader.cxx  AliGMFTTreeTrack.cxx  CMakeLists.txt  srcLinkDef.h
tools/: AliGMFHistogramManager.cxx
unfolding/: unfold.cxx
(+6 files in other folders)
